--- a/shell/launch-tidb.template
+++ b/shell/launch-tidb.template
@@ -1,7 +1,9 @@
 #!/bin/sh
 
-mkdir -p ./data1/deploy_v3.0.3/data.pd/
-mkdir -p ./data1/deploy_v3.0.3/log/
+mkdir -p <data_dir>/deploy_v3.0.3/data.pd/
+mkdir -p <data_dir>/deploy_v3.0.3/log/
+
+cd ~/TiExciting/tidb
 
 if test -f "pid"; then
   echo "tidb-server running, kill pd..."
@@ -10,9 +12,9 @@ if test -f "pid"; then
 fi
 
 nohup ./tidb-server \
-    -P 4000 \
-    --status="10080" \
-    --advertise-address="192.168.233.128" \
-    --path="192.168.233.128:2379" \
-    --log-slow-query="./data1/deploy_v3.0.3/log/tidb_slow_query.log" \
-    --log-file="./data1/deploy_v3.0.3/log/tidb.log" 2>> "./data1/deploy_v3.0.3/log/tidb_stderr.log" & echo $! > pid
+    -P <server_port> \
+    --status="<status_port>" \
+    --advertise-address="<server_ip>" \
+    --path="<pd_cluster>" \
+    --log-slow-query="<data_dir>/deploy_v3.0.3/log/tidb_slow_query.log" \
+    --log-file="<data_dir>/deploy_v3.0.3/log/tidb.log" 2>> "<data_dir>/deploy_v3.0.3/log/tidb_stderr.log" & echo $! > pid
